adds wait between app and db, and experimental jlink for non modular app.