@@ -6,12 +6,32 @@ WORKDIR /myproject
 COPY pom.xml . 
 COPY src src
 
-RUN --mount=type=cache,id=mvncache,target=/root/.m2/repository,rw \ 
+RUN --mount=type=cache,id=mvncache,target=/root/.m2/repository,rw \
 	mvn -B package
 
-FROM eclipse-temurin:11.0.13_8-jre-alpine
-COPY --from=build /myproject/target/*-with-dependencies.jar \
+# Create a custom Java runtime from the dev env.
+RUN MODULES=`jdeps  --ignore-missing-deps --list-deps target/DemoCI-1.0-SNAPSHOT-withdependencies.jar| grep -v -e jdk.compiler -e sun.security.krb5 | tr '\n' ','| tr -d "[:space:]"|head -c -1`  \
+    && $JAVA_HOME/bin/jlink \
+         --add-modules  $MODULES\
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+FROM debian:bullseye-slim
+# Copy the JRE from the dev build env
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=build /javaruntime $JAVA_HOME
+
+# Copy the uber Jar from the dev build env
+COPY --from=build /myproject/target/*-withdependencies.jar \
 		  /myapp.jar
 
-ENTRYPOINT ["java", "-jar"]
-CMD ["/myapp.jar"]
+# Adds the wait script (see variable in docker-compose.yml)
+ENV WAIT_VERSION 2.7.2
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
+RUN chmod +x /wait
+
+ENTRYPOINT ["/bin/sh", "-c", "/wait && java -jar /myapp.jar"]
